# message-recorder

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml
config/: config.yml
src/: config.rs  main.rs  process_zmq_connection.rs  sink.rs  zmq_connection.rs
src/message_decoding/: example_proto.rs  mod.rs
src/protos/: example.proto
src/sinks/: compressed_file_sink.rs  console_sink.rs  file_sink.rs  message_counter.rs  mod.rs  prometheus_sink.rs  raw_file_sink.rs
src/utils/: arg_parser.rs  config.rs  mod.rs
test/: Dockerfile  example_pb2.py  main.py  publish_example_proto.py  read_compressed_data.py  read_compressed_proto.py
