[package]
name = "message-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4"
env_logger = "0.10"
figment = { version = "0.10", features = ["yaml"] }
flate2 = "1.0"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
gag = "1.0.0"
getset = "0.1.2"
log = "0.4"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.3"
tmq = "0.5.0"
tokio = { version = "1", features = ["full"] }
tonic = "0.12.3"

[dev-dependencies]
async-trait = "0.1.83"
mockall = "0.13.1"
tempfile = "3.5"

[build-dependencies]
prost-build = "0.13.3"
